# simulate-queueing-system

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
restaurant_problem/: main.py
restaurant_problem/utils/: constants.py  utils.py
tests/: test_optimal_cooks.py  test_proportions_functions.py
